@@ -158,13 +158,14 @@ let test_file test_filename =
   in
   clean_test_build_directory ();
   Sys.make_directory test_build_directory_prefix;
+  let log_filename =
+    Filename.concat test_build_directory_prefix (test_prefix ^ ".log") in
+  let log =
+    if Options.log_to_stderr then stderr else begin
+      open_out log_filename
+    end in
   let summary = Sys.with_chdir test_build_directory_prefix
     (fun () ->
-       let log =
-         if Options.log_to_stderr then stderr else begin
-           let log_filename = test_prefix ^ ".log" in
-           open_out log_filename
-         end in
        let promote = string_of_bool Options.promote in
        let install_hook name =
          let hook_name = Filename.make_filename hookname_prefix name in
@@ -200,11 +201,13 @@ let test_file test_filename =
        let summary =
          run_test_trees log common_prefix "" initial_status test_trees in
        Actions.clear_all_hooks();
-       if not Options.log_to_stderr then close_out log;
        summary
     ) in
+  if not Options.log_to_stderr then close_out log;
   begin match summary with
-  | Some_failure -> ()
+  | Some_failure ->
+      if not Options.log_to_stderr then
+        Sys.dump_file stderr ~prefix:"> " log_filename
   | No_failure ->
       if not Options.keep_test_dir_on_success then
         clean_test_build_directory ()
