@@ -107,6 +107,7 @@ module Sys = struct
       (fun () -> f ic)
 
   let file_is_empty filename =
+    not (Sys.file_exists filename) ||
     with_input_file filename in_channel_length = 0
 
   let string_of_file filename =
@@ -120,6 +121,19 @@ module Sys = struct
       with End_of_file ->
         failwith ("Got unexpected end of file while reading " ^ filename)
     end
+
+  let iter_lines_of_file f filename =
+    let rec go ic =
+      match input_line ic with
+      | exception End_of_file -> ()
+      | l -> f l; go ic
+    in
+    with_input_file filename go
+
+  let dump_file oc ?(prefix = "") filename =
+    let f s =
+      output_string oc prefix; output_string oc s; output_char oc '\n' in
+    iter_lines_of_file f filename
 
   let with_output_file ?(bin=false) x f =
     let oc = (if bin then open_out_bin else open_out) x in
